--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <title>Vishal Avalani - App Developer</title>
 
-    <!-- Bootstrap core CSS Testing Git-->
+    <!-- Bootstrap core CSS Testing Git 1-->
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,600,700" rel="stylesheet" type="text/css" />
     <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link href="css/style.css?v=1" rel="stylesheet" />
