--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <meta name="author" content="Vishal Avalani" />
     <meta name="description" content="Vishal Avalani - I am passionate full stack web and mobile app developer. I am currently working as Technical Lead" />
-    <meta name="keywords" content="Technical Lead, ASP .NET MVC, Xamarin Developer, Xamarin iOS, Xamarin Android, Full stack developer, SharePoint, jQuery Mobile, knockout js, bootstrap, SQL Server, Nirma University" />
+    <meta name="keywords" content="Vishal Avalani,Technical Lead,ASP .NET MVC,Xamarin Developer,Xamarin iOS,Xamarin Android,Full stack developer,SharePoint,jQuery Mobile,knockout js,bootstrap,SQL Server,Nirma University" />
     <meta name="robots" content="index, follow" />
     <meta name="revisit-after" content="14 days" />
 
