--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <meta name="author" content="Vishal Avalani" />
-    <meta name="description" content="Vishal Avalani - I am passionate full stack web and mobile app developer. I am currently working as Technical Lead" />
+    <meta name="description" content="I am passionate full stack web and mobile app developer. I am currently working as Technical Lead. I believe 'Nothing great in the world can be accomplished without passion! My core areas of interest are Automation, Mobile Application Development, Web Application development and Robotics.'" />
     <meta name="keywords" content="Vishal Avalani,Technical Lead,ASP .NET MVC,Xamarin Developer,Xamarin iOS,Xamarin Android,Full stack developer,SharePoint,jQuery Mobile,knockout js,bootstrap,SQL Server,Nirma University" />
     <meta name="robots" content="index, follow" />
     <meta name="revisit-after" content="14 days" />
