--- a/portfolio/mobile8.html
+++ b/portfolio/mobile8.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <meta name="ROBOTS" content="NOINDEX, NOFOLLOW">
+    <meta name="googlebot" content="noindex">
     <title>Mobile Portfolio</title>
     <!-- Bootstrap core CSS Test Git-->
 
