--- a/portfolio/mobile.html
+++ b/portfolio/mobile.html
@@ -14,8 +14,8 @@
 
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,600,700" rel="stylesheet" type="text/css" />
     <link href="../css/bootstrap.min.css" rel="stylesheet" />
-    <link href="css/ionicons.min.css" rel="stylesheet" />
-    <link href="css/mobile.css" rel="stylesheet" />
+    <link href="../css/ionicons.min.css" rel="stylesheet" />
+    <link href="../css/mobile.css" rel="stylesheet" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
 </head>
