--- a/portfolio/mobile.html
+++ b/portfolio/mobile.html
@@ -59,7 +59,7 @@
         <!-- Project One -->
         <div class="row">
             <div class="col-md-6">
-                <img src="/gifs/WaypointiOS.gif" />
+                <img src="../gifs/WaypointiOS.gif" />
             </div>
             <div class="col-md-6">
                 <h3>Waypoint iOS App</h3>
@@ -86,7 +86,7 @@
         <!-- Project Two -->
         <div class="row">
             <div class="col-md-6">
-                <img src="/gifs/WaypointAndroid.gif" />
+                <img src="../gifs/WaypointAndroid.gif" />
             </div>
             <div class="col-md-6">
                 <h3>Waypoint Android App</h3>
