--- a/portfolio/mobile.html
+++ b/portfolio/mobile.html
@@ -113,7 +113,7 @@
         <div class="row">
             <div class="col-md-1">&nbsp;</div>
             <div class="col-md-10">
-                <a class="btn btn-primary custbutton" href="/portfolio/mobile1.html">Next Project <span class="glyphicon glyphicon-chevron-right"></span></a>
+                <a class="btn btn-primary custbutton" href="../portfolio/mobile1.html">Next Project <span class="glyphicon glyphicon-chevron-right"></span></a>
             </div>
             <div class="col-md-1">&nbsp;</div>
         </div>
