--- a/portfolio/mobile1.html
+++ b/portfolio/mobile1.html
@@ -13,9 +13,9 @@
     <!-- Bootstrap core CSS Test Git-->
 
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,600,700" rel="stylesheet" type="text/css" />
-    <link href="/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="/css/ionicons.min.css" rel="stylesheet" />
-    <link href="/css/mobile.css" rel="stylesheet" />
+    <link href="../css/bootstrap.min.css" rel="stylesheet" />
+    <link href="../css/ionicons.min.css" rel="stylesheet" />
+    <link href="../css/mobile.css" rel="stylesheet" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
 </head>
@@ -59,7 +59,7 @@
         <!-- Project One -->
         <div class="row">
             <div class="col-md-6">
-                <img src="/gifs/TradewizeiOS.gif" />
+                <img src="../gifs/TradewizeiOS.gif" />
             </div>
             <div class="col-md-6">
                 <h3>Tradewize iOS App</h3>
@@ -86,7 +86,7 @@
         <!-- Project Two -->
         <div class="row">
             <div class="col-md-6">
-                <img src="/gifs/TradewizeAndroid.gif" />
+                <img src="../gifs/TradewizeAndroid.gif" />
             </div>
             <div class="col-md-6">
                 <h3>Tradewize Android App</h3>
@@ -113,7 +113,7 @@
         <div class="row">
             <div class="col-md-1">&nbsp;</div>
             <div class="col-md-10">
-                <a class="btn btn-primary custbutton" href="/portfolio/mobile2.html">Next Project <span class="glyphicon glyphicon-chevron-right"></span></a>
+                <a class="btn btn-primary custbutton" href="../portfolio/mobile2.html">Next Project <span class="glyphicon glyphicon-chevron-right"></span></a>
             </div>
             <div class="col-md-1">&nbsp;</div>
         </div>
@@ -165,7 +165,7 @@
         </div>
     </div>
     <!-- Bootstrap core JavaScript -->
-    <script type="text/javascript" src="/js/jquery.min.js"></script>
-    <script type="text/javascript" src="/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="../js/jquery.min.js"></script>
+    <script type="text/javascript" src="../js/bootstrap.min.js"></script>
 </body>
 </html>
