--- a/portfolio/mobile7.html
+++ b/portfolio/mobile7.html
@@ -59,7 +59,7 @@
         <!-- Project One -->
         <div class="row">
             <div class="col-md-6">
-                <img src="/gifs/SMB.gif" />
+                <img src="../gifs/SMB.gif" />
             </div>
             <div class="col-md-6">
                 <h3>SMB App</h3>
@@ -89,7 +89,7 @@
         <div class="row">
             <div class="col-md-1">&nbsp;</div>
             <div class="col-md-10">
-                <a class="btn btn-primary custbutton" href="/portfolio/mobile.html"><span class="glyphicon glyphicon-chevron-left"></span> Back to main</a>
+                <a class="btn btn-primary custbutton" href="../portfolio/mobile.html"><span class="glyphicon glyphicon-chevron-left"></span> Back to main</a>
             </div>
             <div class="col-md-1">&nbsp;</div>
         </div>
