--- a/portfolio/mobile.html
+++ b/portfolio/mobile.html
@@ -37,7 +37,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="/portfolio/mobile.html">Mobile Portfolio</a>
+                        <a href="../portfolio/mobile.html">Mobile Portfolio</a>
                     </li>
                 </ul>
             </div>
