--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
@@ -8,8 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <meta name="author" content="Vishal Avalani" />
-    <meta name="description" content="I am passionate full stack web and mobile app developer. I am currently working as Delivery Lead. I believe 'Nothing great in the world can be accomplished without passion! My core areas of interest are Automation, Mobile Application Development, Web Application development and Robotics.'" />
-    <meta name="keywords" content="Vishal Avalani,Delivery Lead,ASP .NET MVC,Xamarin Developer,Xamarin iOS,Xamarin Android,Full stack developer,SharePoint,jQuery Mobile,knockout js,bootstrap,SQL Server,Nirma University" />
+    <meta name="description" content="I am passionate full stack web and mobile app developer. I am currently working as Technical Lead. I believe 'Nothing great in the world can be accomplished without passion! My core areas of interest are Automation, Mobile Application Development, Web Application development and Robotics.'" />
+    <meta name="keywords" content="Vishal Avalani,Technical Lead,ASP .NET MVC,Xamarin Developer,Xamarin iOS,Xamarin Android,Full stack developer,SharePoint,jQuery Mobile,knockout js,bootstrap,SQL Server,Nirma University" />
     <meta name="robots" content="index, follow" />
     <meta name="revisit-after" content="14 days" />
 
@@ -83,7 +83,7 @@
                 <div class="col-md-4">
                     <h3>About me</h3>
                     <p>
-                        I am a passionate full stack web and mobile app developer. I am currently working as the Delivery Lead at Alept/Affirma Consulting. My core areas of interest are Automation, Mobile Application Development, Web Application development and Robotics.
+                        I am a passionate full stack web and mobile app developer. I am currently working as the Technical Lead at Alept/Affirma Consulting. My core areas of interest are Automation, Mobile Application Development, Web Application development and Robotics.
                     </p>
                     <p>
                         I think luck becomes tangible only when it is accompanied with sufficient preparation. I firmly believe in quality work.  I believe in achieving perfection in whatsoever field I am in, through a combination of hard and smart work. I love working in team and firmly believe that 'together we achieve more'.
@@ -97,8 +97,11 @@
                     <p>
                         <strong>Name:</strong><br />
                         Vishal Avalani<br /><br />
+                        <strong>Age:</strong><br />
+                        29 years<br /><br />
+                        
                         <strong>Total Experience:</strong><br />
-                        9 years<br />
+                        8 years<br />
                     </p>
                 </div>
             </div>
@@ -203,9 +206,9 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        <strong>Delivery Lead</strong>
+                        <strong>Technical Lead</strong>
                     <p>Alept Consulting is an India based Business Consulting company that focuses on highly qualitative, timely delivered and cost-effective offshore software development. Parent company is located in US named Affirma Consulting. </p>
-                    <p>I am working as a Delivery lead and managing 2-3 projects. I have worked on several technologies like .NET MVC, SQL Server, SharePoint, Sitefinity, Xamarin iOS and Android, HTML5, Bootstrap, advanced javascripts, frameworks etc. I have worked for wide range of clients like Advantage Waypoint, Microsoft, Delta Plastics, Advanced Integration Technology, CCI, EHA, XOS Digital, Med Connect, Coatue Management, On Trac, Moses Lake Community Health Center, Selecting Winners, SeaRad etc.</p>
+                    <p>I am working as a Technical lead and managing 2-3 projects. I have worked on several technologies like .NET MVC, SQL Server, SharePoint, Sitefinity, Xamarin iOS and Android, HTML5, Bootstrap, advanced javascripts, frameworks etc. I have worked for wide range of clients like Advantage Waypoint, Microsoft, Delta Plastics, Advanced Integration Technology, CCI, EHA, XOS Digital, Med Connect, Coatue Management, On Trac, Moses Lake Community Health Center, Selecting Winners, SeaRad etc.</p>
 
                     <span class="experience-details">
                         <span class="location">
@@ -313,6 +316,52 @@
                 <div class="col-md-6">
                     <ul class="no-bullets">
 
+                        <li>
+                            <span class="ability-title">React</span>
+                            <span class="ability-score">
+
+
+                                <span class="glyphicon glyphicon-star filled"></span>
+
+
+                                <span class="glyphicon glyphicon-star filled"></span>
+
+
+                                <span class="glyphicon glyphicon-star filled"></span>
+
+
+                                <span class="glyphicon glyphicon-star filled"></span>
+
+
+                                <span class="glyphicon glyphicon-star filled"></span>
+
+
+                            </span>
+                        </li>
+
+                        <li>
+                            <span class="ability-title">React Native</span>
+                            <span class="ability-score">
+
+
+                                <span class="glyphicon glyphicon-star filled"></span>
+
+
+                                <span class="glyphicon glyphicon-star filled"></span>
+
+
+                                <span class="glyphicon glyphicon-star filled"></span>
+
+
+                                <span class="glyphicon glyphicon-star filled"></span>
+
+
+                                <span class="glyphicon glyphicon-star"></span>
+
+
+                            </span>
+                        </li>
+
 
 
 
@@ -383,7 +432,7 @@
                                 <span class="glyphicon glyphicon-star filled"></span>
 
 
-                                <span class="glyphicon glyphicon-star filled"></span>
+                                <span class="glyphicon glyphicon-star"></span>
 
 
                                 <span class="glyphicon glyphicon-star "></span>
@@ -407,7 +456,7 @@
                                 <span class="glyphicon glyphicon-star filled"></span>
 
 
-                                <span class="glyphicon glyphicon-star "></span>
+                                <span class="glyphicon glyphicon-star filled"></span>
 
 
                                 <span class="glyphicon glyphicon-star "></span>
