--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
@@ -315,6 +315,52 @@
 
                 <div class="col-md-6">
                     <ul class="no-bullets">
+
+                        <li>
+                            <span class="ability-title">React</span>
+                            <span class="ability-score">
+
+
+                                <span class="glyphicon glyphicon-star filled"></span>
+
+
+                                <span class="glyphicon glyphicon-star filled"></span>
+
+
+                                <span class="glyphicon glyphicon-star filled"></span>
+
+
+                                <span class="glyphicon glyphicon-star filled"></span>
+
+
+                                <span class="glyphicon glyphicon-star filled"></span>
+
+
+                            </span>
+                        </li>
+
+                        <li>
+                            <span class="ability-title">React Native</span>
+                            <span class="ability-score">
+
+
+                                <span class="glyphicon glyphicon-star filled"></span>
+
+
+                                <span class="glyphicon glyphicon-star filled"></span>
+
+
+                                <span class="glyphicon glyphicon-star filled"></span>
+
+
+                                <span class="glyphicon glyphicon-star filled"></span>
+
+
+                                <span class="glyphicon glyphicon-star"></span>
+
+
+                            </span>
+                        </li>
 
 
 
