More updates to meta tags

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <meta name="author" content="Vishal Avalani" />
-    <meta name="description" content="I am passionate full stack web and mobile app developer. I am currently working as Technical Lead. I believe 'Nothing great in the world can be accomplished without passion! My core areas of interest are Automation, Mobile Application Development, Web Application development and Robotics.'" />
-    <meta name="keywords" content="Vishal Avalani,Technical Lead,ASP .NET MVC,Xamarin Developer,Xamarin iOS,Xamarin Android,Full stack developer,SharePoint,jQuery Mobile,knockout js,bootstrap,SQL Server,Nirma University" />
+    <meta name="description" content="I am a passionate full stack web and mobile app developer with over 11 years of work experience. I am currently working as freelance technical consultant and corporate trainer. I have worked at Affirma Consulting as Solution Architect. I have worked with IT giants like Accenture for couple of years." />
+    <meta name="keywords" content="React JS, React Native, Developer, Corporate Trainer" />
     <meta name="robots" content="index, follow" />
     <meta name="revisit-after" content="14 days" />
 
@@ -36,7 +36,7 @@
                     </div>
             <h1>Hello, I'm <br /><b>Vishal Avalani</b></h1>
             <p>Senior Mobile and Web developer.</p>
-            <i>11+ years of development experience.</i><br />
+            <i>11+ years of professional experience.</i><br />
             <i>(USA B1/B2 VISA Holder)</i>
           
             <!-- <div id="h">
