--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                                 <span class="glyphicon glyphicon-star filled"></span>
                                 <span class="glyphicon glyphicon-star filled"></span>
                                 <span class="glyphicon glyphicon-star filled"></span>
-                                <span class="glyphicon glyphicon-star"></span>
+                                <span class="glyphicon glyphicon-star filled"></span>
                                 <span class="glyphicon glyphicon-star"></span>
                             </span>
                         </li>
@@ -174,7 +174,7 @@
                                 <span class="glyphicon glyphicon-star filled"></span>
                                 <span class="glyphicon glyphicon-star filled"></span>
                                 <span class="glyphicon glyphicon-star filled"></span>
-                                <span class="glyphicon glyphicon-star"></span>
+                                <span class="glyphicon glyphicon-star filled"></span>
                                 <span class="glyphicon glyphicon-star"></span>
                             </span>
                         </li>
