--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                                 <span class="ability-score">
                                     <span class="glyphicon glyphicon-star filled"></span>
                                     <span class="glyphicon glyphicon-star filled"></span>
-                                    <span class="glyphicon glyphicon-star"></span>
+                                    <span class="glyphicon glyphicon-star filled"></span>
                                     <span class="glyphicon glyphicon-star"></span>
                                     <span class="glyphicon glyphicon-star"></span>
                                 </span>
@@ -277,7 +277,7 @@
                                 <span class="ability-score">
                                     <span class="glyphicon glyphicon-star filled"></span>
                                     <span class="glyphicon glyphicon-star filled"></span>
-                                    <span class="glyphicon glyphicon-star"></span>
+                                    <span class="glyphicon glyphicon-star filled"></span>
                                     <span class="glyphicon glyphicon-star"></span>
                                     <span class="glyphicon glyphicon-star"></span>
                                 </span>
