update home page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="robots" content="index, follow" />
     <meta name="revisit-after" content="14 days" />
 
-    <title>Vishal Avalani - React React Native .NET Developer</title>
+    <title>Vishal Avalani - Technical Consultant</title>
 
     <!-- Bootstrap core CSS Test Git-->
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,600,700" rel="stylesheet" type="text/css" />
@@ -36,7 +36,7 @@
                     </div>
             <h1>Hello, I'm <br /><b>Vishal Avalani</b></h1>
             <p>Senior Mobile and Web developer.</p>
-            <i>11+ years of professional experience.</i><br />
+            <i>13+ years of professional experience.</i><br />
             <i>(USA B1/B2 VISA Holder)</i>
           
             <!-- <div id="h">
@@ -96,7 +96,7 @@
                 <div class="col-md-8 col-md-push-2">
                     <h3>About me</h3>
                     <p>
-                        I am a passionate full stack web and mobile app developer with over 11 years of work experience. I am currently working as freelance technical consultant and corporate trainer. I have worked at Affirma Consulting as Solution Architect. I have worked with IT giants like Accenture for couple of years.</p>
+                        I am a passionate full stack web and mobile app developer with over 13 years of work experience. I am currently working as freelance technical consultant. I have worked at Affirma Consulting as Solution Architect. I have worked with IT giants like Accenture for couple of years.</p>
                     <p>My core areas of interest are Mobile and Web Application development. This in includes a range of technologies both frontend and backend side. I also love automation and robotics.
                     </p>
                     <p>
@@ -135,6 +135,16 @@
             <div class="row">
                 <div class="col-md-6">
                     <ul class="no-bullets">
+                        <li>
+                            <span class="ability-title">.NET Core (MVC and Razor)</span>
+                            <span class="ability-score">
+                                <span class="glyphicon glyphicon-star filled"></span>
+                                <span class="glyphicon glyphicon-star filled"></span>
+                                <span class="glyphicon glyphicon-star filled"></span>
+                                <span class="glyphicon glyphicon-star filled"></span>
+                                <span class="glyphicon glyphicon-star filled"></span>
+                            </span>
+                        </li>
                         <li>
                             <span class="ability-title">React</span>
                             <span class="ability-score">
@@ -679,7 +689,7 @@
                             </div>
                             <div class="col-md-8">
                                 <p>
-                                    <strong>Freelance Technical consultant/Corporate Trainer</strong>
+                                    <strong>Freelance Technical consultant</strong>
                                 <p>I started working independently as Freelance technical consultant and corporate trainer from Feb 2019.</p>
                                 <p>I have rich experience working with demanding clients and a proven track record of delivering successfully within time without compromising in quality and with utmost customer satisfaction with added delight.</p>
         
