--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@
                             <div class="col-md-8">
                                 <p>
                                     <strong>Freelance Technical consultant</strong>
-                                <p>I started working independently as Freelance technical consultant and corporate trainer from Feb 2019.</p>
+                                <p>I started working independently as Freelance technical consultant from Feb 2019.</p>
                                 <p>I have rich experience working with demanding clients and a proven track record of delivering successfully within time without compromising in quality and with utmost customer satisfaction with added delight.</p>
         
                                 <span class="experience-details">
